update pom structure

--- a/pom.xml
+++ b/pom.xml
@@ -102,13 +102,11 @@
 	    <dependency>
 	      <groupId>com.google.guava</groupId>
 	      <artifactId>guava</artifactId>
-	      <version>18.0</version>
 	      <scope>compile</scope>
 	    </dependency>
 	    <dependency>
 	      <groupId>org.apache.commons</groupId>
 	      <artifactId>commons-lang3</artifactId>
-	      <version>3.6</version>
 	      <scope>compile</scope>
 	    </dependency>
 	    <dependency>
@@ -154,6 +152,7 @@
     <build>
         <plugins>
             <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.7.0</version>
                 <configuration>
@@ -162,6 +161,7 @@
                 </configuration>
             </plugin>
             <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-plugin-plugin</artifactId>
                 <version>3.6.0</version>
                 <executions>
@@ -174,7 +174,6 @@
                     </execution>
                 </executions>
             </plugin>
-            
         <plugin>
 		    <groupId>org.apache.maven.plugins</groupId>
 		    <artifactId>maven-shade-plugin</artifactId>
