--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,9 @@
 	<parent>
         <groupId>de.mhus.lib</groupId>
         <artifactId>mhus-oss</artifactId>
-        <version>3.6.0-SNAPSHOT</version>
+        <version>3.6.0</version>
 	</parent>
+	<version>3.6.0</version>
 	<artifactId>constgenerator-maven-plugin</artifactId>
 	<packaging>maven-plugin</packaging>
 	<url>http://www.mhus.de</url>
