--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
         <artifactId>mhus-oss</artifactId>
         <version>3.6.0</version>
 	</parent>
-	<version>3.6.1</version>
+	<version>3.6.2-SNAPSHOT</version>
 	<artifactId>constgenerator-maven-plugin</artifactId>
 	<packaging>maven-plugin</packaging>
 	<url>http://www.mhus.de</url>
