--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <artifactId>mhus-oss</artifactId>
         <version>3.6.0</version>
 	</parent>
+    <groupId>de.mhus.mvn.plugin</groupId>
 	<version>3.6.2-SNAPSHOT</version>
 	<artifactId>constgenerator-maven-plugin</artifactId>
 	<packaging>maven-plugin</packaging>
