--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
         <version>3.6.0</version>
 	</parent>
     <groupId>de.mhus.mvn.plugin</groupId>
-	<version>3.6.2-SNAPSHOT</version>
+	<version>3.6.2</version>
 	<artifactId>constgenerator-maven-plugin</artifactId>
 	<packaging>maven-plugin</packaging>
 	<url>http://www.mhus.de</url>
